# stringr-rust-text-editor

./: .gitignore  Cargo.toml  Dioxus.toml  input.css  package.json
src/: app.rs  main.rs  theme.rs
src/document/: mod.rs
src/editor/: buffer.rs  cursor.rs  mod.rs
src/file/: io.rs  mod.rs
src/ui/: mod.rs  status_bar.rs  title_bar.rs
